lintian (2.5.31) UNRELEASED; urgency=medium

  * checks/fields.desc:
    + [BR] Add reference to build-depends-on-metapackage
      (Closes: #767107).

  * collection/strings:
    + [NT] Pass "-a" to strings to avoid possible security
      issues in strings.

  * data/binaries/arch-regex:
    + [NT] Add arm64 and ppc64el regex.
    + [NT] Correct armel and armhf regex to cope with
      statically linked binaries.  (Closes: #768884)
  * data/changes-file/known-dists:
    + [ADB] Add "stretch".
  * data/files/privacy-breaker-websites:
    + [BR] Add specific test for privacy breach with modernizr.js
      (Closes: #769679).

  * debian/control:
    + [NT] Recommend dpkg (>= 1.17.14) for the --ctrl-tarfile
      option in dpkg-deb.  Lintian relies on it to support
      (u)deb files without a gzip compressed control.tar file.

  * frontend/lintian:
    + [NT] Produce a better error message for lintian detects
      that a check has a dependency on an unknown collection.

  * lib/Lintian/Command.pm:
    + [NT] Use croak() rather than L::Util's fail() on errors.
      The issues are generally not "internal errors".
  * lib/Lintian/Util.pm:
    + [NT] Prefer dpkg-deb --ctrl-tarfile to "ar p" when dpkg
      is recent enough.

  * profiles/ubuntu/main.profile:
    + [BR] Exclude no-human-maintainers (Closes: #769036).

 -- Niels Thykier <niels@thykier.net>  Sun, 09 Nov 2014 15:25:04 +0100

lintian (2.5.30) unstable; urgency=medium

  The "welcome Axel Beckert!" release.

  * Summary of tag changes:
    + Removed:
      - deprecated-kdelnk-file

  * checks/menu-format.{desc,pm}:
    + [NT] Retire check for "kdelnk" files.

  * collection/unpacked:
    + [NT] Correct handling of files with 2 or more consecutive
      backslashes.

  * debian/control:
    + [AB] Add a Homepage header pointing to https://lintian.debian.org/
  * debian/copyright:
    + [AB] Add myself to debian/copyright.
  * debian/rules: