@@ -3,6 +3,12 @@ lintian (2.5.31) UNRELEASED; urgency=medium
   * checks/fields.desc:
     + [BR] Add reference to build-depends-on-metapackage
       (Closes: #767107).
+  * checks/source-copyright.pm:
+    + [BR] Fix a false positive for
+      missing-license-paragraph-in-dep5-copyright tag.
+      Do not allow to reference header paragraph,
+      emit a specific tag.
+      (Closes: #766118).
 
   * collection/strings:
     + [NT] Pass "-a" to strings to avoid possible security
